Adding multiples routes : - auth - users
All controllers (handlers) returns HTTP Status code 501 (Not Implemented).

Updating swagger doc.
