# internal/controllers/auth.go
@@ -8,9 +8,8 @@
 package controllers
 
 import (
-	"net/http"
-
 	"github.com/gin-gonic/gin"
+	"net/http"
 )
 
 // Login godoc
@@ -18,19 +17,30 @@ import (
 // @Description Returns users infos on successful creation.
 // @Tags auth
 // @Produce json
-// @Success 200 {object} map[string]string "token"
-// @Router /api/login [post]
+// @Success 200
+// @Router /auth/login [post]
 func Login(c *gin.Context) {
-	c.JSON(http.StatusOK, gin.H{"token": "hello from controller"})
+	c.JSON(http.StatusNotImplemented, gin.H{})
 }
 
-// Register godoc
-// @Summary Register a new account to the service
+// Refresh godoc
+// @Summary Logging to an account to generate an api token
 // @Description Returns users infos on successful creation.
 // @Tags auth
 // @Produce json
-// @Success 200 {object} map[string]string "OK status"
-// @Router /api/register [post]
-func Register(c *gin.Context) {
-	c.JSON(http.StatusOK, gin.H{"data": "hello from controller"})
+// @Success 200
+// @Router /auth/refresh [post]
+func Refresh(c *gin.Context) {
+	c.JSON(http.StatusNotImplemented, gin.H{})
+}
+
+// Revoke godoc
+// @Summary Revoke an existing token
+// @Description Revoke the current token.
+// @Tags auth
+// @Produce json
+// @Success 200
+// @Router /auth/revoke [post]
+func Revoke(c *gin.Context) {
+	c.JSON(http.StatusNotImplemented, gin.H{})
 }
