# internal/controllers/health.go
@@ -8,9 +8,8 @@
 package controllers
 
 import (
-	"net/http"
-
 	"github.com/gin-gonic/gin"
+	"net/http"
 )
 
 // HealthCheck godoc
@@ -18,10 +17,10 @@ import (
 // @Description Returns a simple OK status to verify the service is up and running
 // @Tags health
 // @Produce json
-// @Success 200 {object} map[string]string "OK status"
-// @Router /api/health [get]
+// @Success 200
+// @Router /health [get]
 func HealthCheck(c *gin.Context) {
-	c.JSON(http.StatusOK, gin.H{"status": "ok"})
+	c.JSON(http.StatusNotImplemented, gin.H{})
 }
 
 // Ping godoc
@@ -29,8 +28,8 @@ func HealthCheck(c *gin.Context) {
 // @Description Returns a simple pong status to verify the service is up and running
 // @Tags health
 // @Produce json
-// @Success 200 {object} map[string]string "PONG status"
-// @Router /api/ping [get]
+// @Success 200
+// @Router /ping [get]
 func Ping(c *gin.Context) {
-	c.JSON(http.StatusOK, gin.H{"status": "pong"})
+	c.JSON(http.StatusOK, gin.H{"message": "pong"})
 }
